[package]
name = "rust-graphics"
version = "0.1.0"
authors = ["Billy Hadlow"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.50"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.73"

[dependencies.web-sys]
version = "0.3.4"
features = [
	'Document',
	'Element',
	'EventTarget',
	'HtmlCanvasElement',
	'MouseEvent',
	'Window',
]
