[package]
name = "rust-physics"
version = "0.1.0"
authors = ["Billy Hadlow"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.50"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.73"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
	'Document',
	'Element',
	'EventTarget',
	'CanvasRenderingContext2d',
	'HtmlCanvasElement',
	'MouseEvent',
	'Window',
]
